--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,9 +9,14 @@ fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
     prefix: /about
 
-fos_user_register:
-    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /register
+#fos_user_register:
+#    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+#    prefix: /register
+
+fos_user_registration_register:
+    path:  /register
+    methods: [GET, POST]
+    defaults:  { _controller: AppBundle:Default:register }
 
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
